--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "walk-in-monitor",
+  "name": "walk-in-utilization",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.34.0",
+    "@aws-sdk/lib-dynamodb": "^3.34.0",
+    "@netlify/functions": "^0.7.2",
     "@types/node": "^16.10.1",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
