--- a/package.json
+++ b/package.json
@@ -3,19 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.34.0",
-    "@aws-sdk/lib-dynamodb": "^3.34.0",
+    "@aws-sdk/client-dynamodb": "^3.36.1",
+    "@aws-sdk/lib-dynamodb": "^3.36.1",
     "@netlify/functions": "^0.7.2",
-    "@types/node": "^16.10.1",
-    "@types/react": "^17.0.24",
+    "@types/node": "^16.10.9",
+    "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.9",
     "normalize.css": "^8.0.1",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "sass": "^1.42.1",
-    "typescript": "^4.4.3"
+    "react-scripts": "^4.0.3",
+    "sass": "^1.43.2",
+    "typescript": "^4.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
